--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,15 @@ dependencies {
 
    compile 'org.apache.commons:commons-dbcp2:2.1'
 
-	compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.5.Final'
+   compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.5.Final'
 
-    testImplementation 'junit:junit:4.12'
+   compile group: 'org.springframework', name: 'spring-context', version: '5.0.8.RELEASE'
+
+
+   testImplementation 'junit:junit:4.12'
     
-    compileOnly 'org.projectlombok:lombok:1.18.0'
-  	apt "org.projectlombok:lombok:1.18.0"
+   compileOnly 'org.projectlombok:lombok:1.18.0'
+  apt "org.projectlombok:lombok:1.18.0"
   
 }
 
