--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
    compile group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.10'
    
-   compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.6'
+   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6'
    
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    
